<resources>
    <string name="app_name">BiodataKu</string>
    <string name="welcome_message">Projek Akhir Mobile Computing</string>
    <string name="subtitle">Kelompok 3</string>
    <string name="member_label">Anggota Kelompok</string>
    <string name="member_1_name">Akmal Fiqri</string>
    <string name="member_1_nim">123456789</string>
    <string name="member_1_email">akmal@example.com</string>
    <string name="member_2_name">Barkah Ibrahim</string>
    <string name="member_2_nim">123456790</string>
    <string name="member_2_email">barkah@example.com</string>
    <string name="member_3_name">Mohammad Dirham</string>
    <string name="member_3_nim">123456791</string>
    <string name="member_3_email">dirham@example.com</string>
    <string name="member_4_name">Siyama</string>
    <string name="member_4_nim">123456792</string>
    <string name="member_4_email">siyama@example.com</string>
    <string name="name_label">Nama</string>
    <string name="name_value">Akmal Fiqri</string>
    <string name="nim_label">NIM</string>
    <string name="nim_value">123456789</string>
    <string name="email_label">Email</string>
    <string name="email_value">akmal@example.com</string>
    <string name="phone_label">Telepon</string>
    <string name="phone_value">08123456789</string>
    <string name="address_label">Alamat</string>
    <string name="address_value">Jl. Merdeka No. 123, Jakarta</string>
    <string name="btn_show_detail">Siyama</string>
    <string name="detail_title">Detail Biodata</string>
    <string name="data_received">Data yang Diterima</string>
    <string name="btn_back">Kembali</string>
    <string name="cv_title">BIODATA</string>
    <string name="cv_data_pribadi">DATA PRIBADI</string>
    <string name="cv_nama">Akmal Fiqri</string>
    <string name="cv_ttl">Tanggerang, 8 Mei 2006</string>
    <string name="cv_jk">Laki-laki</string>
    <string name="cv_agama">Islam</string>
    <string name="cv_alamat">KP. Gembor, RT01/RW01</string>
    <string name="cv_status">Belum Menikah</string>
    <string name="cv_no_hp">0896-2964-5940</string>
    <string name="cv_email">akmalfiqri@gmail.com</string>
    <string name="cv_data_pendidikan">DATA PENDIDIKAN</string>
    <string name="cv_sd">MI Al-Husna Gembor</string>
    <string name="cv_smp">MTS Al-Husna Gembor</string>
    <string name="cv_sma">SMKI Baidhaul Ahkam</string>
    <string name="cv_kuliah">Universitas Yatsi Madani</string>
    <string name="person_2_nama">Barkah Ibrahim</string>
    <string name="person_2_ttl">Tanggerang, 15 Januari 2005</string>
    <string name="person_2_jk">Laki-laki</string>
    <string name="person_2_agama">Islam</string>
    <string name="person_2_alamat">Perumahan harapan, RT04/RW05</string>
    <string name="person_2_status">Belum menikah</string>
    <string name="person_2_no_hp">0851-1741-1505</string>
    <string name="person_2_email">Barkahibrahim23@gmail.com</string>
    <string name="person_2_sd">SDN 1 BENCONGAN INDAH</string>
    <string name="person_2_smp">SMPN 1 KELAPA 2</string>
    <string name="person_2_sma">SMK SIERE CENDEKIA</string>
    <string name="person_2_kuliah">UNIVERSITAS YATSI MADANI</string>
    <string name="person_3_nama">Muhammad Dirham</string>
    <string name="person_3_ttl">Tangerang, 17 Desember 2006</string>
    <string name="person_3_jk">Laki-laki</string>
    <string name="person_3_agama">Islam</string>
    <string name="person_3_alamat">Kp.bayur encle rt005/rw005 kab.tangerang</string>
    <string name="person_3_status">Belum menikah</string>
    <string name="person_3_no_hp">0857-1016-2237</string>
    <string name="person_3_email">Muhammaddirham2023@gmail.com</string>
    <string name="person_3_sd">Sd Min 1 kota Tangerang</string>
    <string name="person_3_smp">Mts Daarul hikmah</string>
    <string name="person_3_sma">SMA Nusantara unggul</string>
    <string name="person_3_kuliah">Universitas Yatsi madani</string>
    <string name="person_4_nama">Siyama</string>
    <string name="person_4_ttl">-</string>
    <string name="person_4_jk">-</string>
    <string name="person_4_agama">-</string>
    <string name="person_4_alamat">-</string>
    <string name="person_4_status">-</string>
    <string name="person_4_no_hp">-</string>
    <string name="person_4_email">-</string>
    <string name="person_4_sd">-</string>
    <string name="person_4_smp">-</string>
    <string name="person_4_sma">-</string>
    <string name="person_4_kuliah">-</string>

    <!-- Label strings for SecondActivity (Label: Value format) -->
    <string name="label_nama">Nama :</string>
    <string name="label_ttl">Tempat, Tanggal Lahir :</string>
    <string name="label_jk">Jenis Kelamin :</string>
    <string name="label_agama">Agama :</string>
    <string name="label_alamat">Alamat :</string>
    <string name="label_status">Status :</string>
    <string name="label_no_hp">No. Handphone :</string>
    <string name="label_email">Email :</string>
    <string name="label_sd">Sekolah Dasar :</string>
    <string name="label_smp">Sekolah Menengah Pertama :</string>
    <string name="label_sma">Sekolah Menengah Atas :</string>
    <string name="label_kuliah">Kuliah :</string>
    <string name="avatar_placeholder_desc">Foto Profil</string>
    <string name="btn_github">GitHub</string>
</resources>
